# CmdKit

./: .gitignore  .readthedocs.yaml  MANIFEST.in  Makefile  Pipfile  README.md  README.rst  pyproject.toml  setup.py
.github/: FUNDING.yml
.github/workflows/: build-check.yml  publish.yml  python-package.yml  tests.yml
cmdkit/: __init__.py  __meta__.py  app.py  cli.py  config.py  logging.py
cmdkit/contrib/: builder.py  guards.py  parallel.py
cmdkit/provider/: builder.py
cmdkit/service/: agent.py  daemon.py  service.py
docs/: Makefile  conf.py  index.rst
docs/api/: ansi.rst  app.rst  cli.rst  config.rst  index.rst  logging.rst  namespace.rst  platform.rst
docs/blog/: 20230927_2_7_0_release.rst  20230927_2_7_1_release.rst  20231012_2_7_3_release.rst  20240123_2_7_4_release.rst  20240417_2_7_5_release.rst  20241206_2_7_6_release.rst  20241226_2_7_7_release.rst  index.rst
docs/source/: conf.py  contributing.rst  index.rst  license.rst
docs/source/api/: app.rst  cli.rst  config.rst  index.rst  logging.rst
docs/source/tutorial/: simple.rst  subcommands.rst
docs/tutorial/: index.rst  library.rst  simple.rst
examples/: full-hello.py  tiny-hello.py
src/cmdkit/: __init__.py  __meta__.py  ansi.py  app.py  cli.py  config.py  logging.py  namespace.py  platform.py
src/cmdkit/contrib/: builder.py
src/cmdkit/service/: agent.py  daemon.py  service.py
tests/: __init__.py  test_app.py  test_config.py  test_service.py
tests/test_contrib/: __init__.py  test_builder.py
tests/test_service/: __init__.py  test_daemon.py
