[tool.poetry]
name = "cmdkit"
version = "2.7.5"
description = "A command-line utility toolkit for Python."
readme = "README.rst"
license = "Apache-2.0"
homepage = "https://cmdkit.readthedocs.io"
documentation = "https://cmdkit.readthedocs.io"
repository = "https://github.com/glentner/cmdkit"
authors = [
    "Geoffrey Lentner <glentner@purdue.edu>"
]
keywords = ["command-line", "utility", "toolkit"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: Apache Software License",
]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
toml = {version = "^0.10.2", optional = true}
pyyaml = {version = "^6.0.1", optional = true}

[tool.poetry.group.docs.dependencies]
sphinx = "^7.2.6"
sphinx-sitemap = "^2.5.1"
sphinx-autobuild = "^2021.3.14"
sphinx-copybutton = "^0.5.2"
sphinxext-opengraph = "^0.9.1"
sphinxcontrib-details-directive = "^0.1.0"
sphinx-toolbox = "^3.5.0"
pydata-sphinx-theme = "^0.15.1"
enum-tools = {extras = ["sphinx"], version = "^0.10.0"}

[tool.poetry.group.dev.dependencies]
toml = "^0.10.2"
pyyaml = "^6.0.1"
pytest = "^7.4.4"
pytest-cov = "^4.1.0"
hypothesis = "^6.92.6"
ruff = "^0.1.11"
pyright = "^1.1.345"
pynvim = "^0.5.0"
ipython = "^8.20.0"
sphinx-autobuild = "^2021.3.14"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = ["--strict-markers", ]
markers = [
    "unit: Unit tests are short, interface driven tests on discrete components.",
    "integration: Integration tests are often longer and deal with the interaction between systems.",
    "parameterize: Place holder for parameterized tests (not a real type).",
]
